--- a/Java/线程/使用信号量实现生产者-消费者模式.md
+++ b/Java/线程/使用信号量实现生产者-消费者模式.md
@@ -11,5 +11,118 @@
 　　注意，不能先对缓冲区进行加锁，再测试信号量。也就是说，不能先执行 down(mutex) 再执行 down(empty)。如果这么做了，那么可能会出现这种情况：生产者对缓冲区加锁后，执行 down(empty) 操作，发现 empty = 0，此时生产者睡眠。消费者不能进入临界区，因为生产者对缓冲区加锁了，消费者就无法执行 up(empty) 操作，empty 永远都为 0 ，导致生产者永远等待下去，不会释放锁，消费者因此也会永远等待下去。
 
 
+
+```java
+public class Cache {
+
+    private int cacheSize = 0;
+    // 互斥量，控制对缓冲区的互斥访问。
+    public Semaphore mutex;
+
+    // empty 记录空缓冲区的数量
+    // empty 信号量是在生产者进程中使用，当 empty 不为 0 时，胜差这才可以放入物品
+    // 保证了容器空的时候（empty 的信号量 <= 0），消费者等待
+    public Semaphore empty;
+
+    // full 记录满缓冲区的数量。
+    // full 信号量是在消费者进程中使用，当 full 信号量不为 0 时，消费者才可以取走物品
+    // 保证了容器满的时候（full 的信号量 <= 0），生产者等待
+    public Semaphore full;
+
+    public Cache(int size) {
+        mutex = new Semaphore(1);
+        empty = new Semaphore(size);
+        full = new Semaphore(0);
+    }
+
+    public int getCacheSize() {
+        return cacheSize;
+    }
+
+    public void produce() throws InterruptedException {
+        empty.acquire(); // 消耗一个空位
+        mutex.acquire();
+        cacheSize++;
+        System.out.println("生产了一个产品，当前产品数为：" + cacheSize);
+        mutex.release();
+        full.release(); // 增加了一个产品
+    }
+
+    public void consume() throws InterruptedException {
+        full.acquire(); // 消耗了一个产品
+        mutex.acquire();
+        cacheSize--;
+        System.out.println("消费了一个产品，当前产品数为：" + cacheSize);
+        mutex.release();
+        empty.release(); // 增加了一个空位
+    }
+}
+```
+
+
+
+```java
+public class ProducerAndConsumer {
+
+    public static void main(String[] args) {
+        Cache cache = new Cache(10);
+
+        Producer producer = new Producer(cache);
+        int producerCount = 4, consumerCount = 4;
+        for (int i = 0; i < producerCount; i++) {
+            new Thread(producer).start();
+        }
+        Consumer consumer = new Consumer(cache);
+        for (int i = 0; i < consumerCount; i++) {
+            new Thread(consumer).start();
+        }
+
+    }
+
+    public static class Producer implements Runnable {
+        private Cache cache;
+
+        public Producer(Cache cache) {
+            this.cache = cache;
+        }
+
+        @Override
+        public void run() {
+            while (true) {
+                try {
+                    cache.produce();
+                    Thread.sleep(1000);
+                } catch (InterruptedException e) {
+                    e.printStackTrace();
+                }
+            }
+        }
+    }
+
+    private static class Consumer implements Runnable {
+        private Cache cache;
+
+        public Consumer(Cache cache) {
+            this.cache = cache;
+        }
+
+        @Override
+        public void run() {
+            while (true) {
+                try {
+                    cache.consume();
+                    Thread.sleep(1000);
+                } catch (InterruptedException e) {
+                    e.printStackTrace();
+                }
+            }
+        }
+    }
+}
+```
+
+
+
+
 ## 参考文章
 1. [java 使用信号量Semaphore实现生产者-消费者模式](https://blog.csdn.net/whueratsjtuer/article/details/88965300)
