--- a/Java/线程/锁.md
+++ b/Java/线程/锁.md
@@ -2,15 +2,89 @@
 
 　　Java 提供了种类丰富的锁，每种锁因其特性的不同 ，在适当的场景下能够展现出非常高的效率。
 
+## 预备知识
+
+### 1. AQS
+
+　　AbstractQueuedSynchronzied 抽象对象式的同步器，AQS 定义了以套多线程访问共享资源的同步器框架，许多同步类实现都依赖于它，如常用的 ReentrantLock/Semaphore/CountDownLatch...
+
+　　AQS 维护了一个 volatile int state（代表共享资源）和一个 FIFO 线程等待队列（多线程争用资源被阻塞时会进入此队列）。
+
+　　state 的访问方式有三种：
+
+```java
+getState()
+setState()
+compareAndSetState()
+```
+
+　　AQS 定义两种资源共享方式：Exclusive（独占，只有一个线程能执行，如 ReentrantLock）和 Share（共享，多个线程可同时执行，如 Semaphore/CountDownLatch）。
+
+　　不同的自定义同步器争用共享资源的方式也不同。自定义同步器在实现时只需要实现共享资源 state 的获取与释放方式即可，至于具体线程等待队列的维护（如获取资源失败入队/唤醒出队等），AQS 已经在顶层实现好了。自定义同步器实现时主要实现以下几种方法：
+
+```java
+isHeldExclusively()：该线程是否正在独占资源。只有用到 condition 才需要去实现它。
+tryAquire(int)：独占方式。尝试获取资源，成功则返回 true，失败则返回 false.
+tryRelease(int)：独占方式。尝试释放资源，成功则返回 true，失败则返回 false。
+tryAcquireShared(int)：共享方式。尝试获取资源。负数表示失败；0表示成功，但没有剩余可用资源；正数表示成功，且有剩余资源。
+tryReleaseShared(int)：共享方式。尝试释放资源，如果释放后允许唤醒后续等待节点返回 true，否则返回 false。
+```
+
+　　以 ReentrantLock 为例，state 初始化为 0，表示未锁定状态。A 线程 lock() 时，会调用 tryAcquire() 独占该锁并将 state+1。此后，其他线程再 tryAcquire() 时就会失败，直到 A 线程 unlock() 到 state = 0 （即释放锁）为止，其他线程才有机会获取该锁。当然，释放锁之前，A 线程自己是可以重复获取此锁的（state 会累加），这就是可重入的概念。但要注意，获取多多少次就要释放多少次，这样才能保证 state 是能回到零态的。
+
+### 2. CAS
+
+
+
 ## 1. 乐观锁 VS 悲观锁
 
-　　客观所与悲观锁是一种广义上的概念，体现了看待线程同步的不同角度。在 Java 和数据库中都有此概念对应的实际应用。
+　　乐观锁与悲观锁是一种广义上的概念，体现了看待线程同步的不同角度。在 Java 和数据库中都有此概念对应的实际应用。
+
+　　乐观锁与悲观锁并不是特指某两种类型的锁，是人们定义出来的概念或思想，主要是指看到并发同步的角度。
+
+　　乐观锁：顾名思义，就是很乐观，每次去拿数据的时候都认为别人不会修改，所以不会上锁，但是在更新的时候会判断一下在此期间别人有没有去更新这个数据，可以使用版本号等机制。乐观锁适用于多读的应用类型，这样可以提高吞吐量，在 Java 中 java.util.concurrent.atomic 包下面的原子变量类就是使用了乐观锁的一种实现方式 CAS(Compare and Swap 比较并交换)实现的。
 
 　　对于同一个数据的并发操作，悲观锁认为自己在使用数据的时候一定有别的线程来修改数据，因此在获取数据的时候会先加索，确保数据不会被别的线程修改。Java 中，synchronized 关键字和 Lock 的实现类都是悲观锁。
+
+　　悲观锁：送时假设最坏的情况，每次去拿数据的时候都认为别人会修改，所以每次在拿数据的时候都会上锁，这样别人想拿这个数据就会阻塞直到它拿到所。比如 Java 里面的同步原语 synchronzied 关键字的实现都是悲观锁。
+
+　　悲观锁适合写操作非常多的场景，乐观锁适合读操作非常多的场景，不加锁会带来大量的性能提升。
+
+　　悲观锁在 Java 中的使用，就是利用各种锁。
+
+　　乐观锁在 Java 中的使用，是无锁编程，常常采用的是 CAS 算法，典型的例子就是原子类，通过 CAS 自旋实现原子操作的更新。
 
 　　而乐观锁认为自己在使用数据时不会有别的线程修改数据，所以不会添加锁，只是在更新数据的时候去判断之前有没有别的线程更新了这个数据。如果这个数据没有被更新，当前线程将自己修改的数据成功写入。如果数据已经被其他线程更新，则根据不同的实现方式执行不同的操作（例如报错或者自动重试）。
 
 　　乐观锁在 Java 中是通过使用无锁变成来实现，最长采用的是 CAS 算法，Java 原子类中的递增操作就通过 CAS 自旋实现的。
+
+### 1.1. 乐观锁
+
+　　乐观锁总是认为不存在并发问题，每次去取数据的时候，总认为不会有其他线程对数据进行修改，因此不会上锁。但是在更新时会判断线程在这之前有没有对数据进行修改，一般会使用 “数据版本机制” 或 “CAS操作” 来实现。
+
+#### 1.1.1. 数据版本机制
+
+　　实现数据版本一般有两种，第一种是使用版本号，第二种是使用时间戳。以版本号方式为例。
+
+　　版本号方式：一般是在数据表中加上一个数据版本号 version 字段，表示数据被修改的次数，当数据被修改时，version 值会加一。当线程 A 要更新数据值时，在读取数据的同时也会读取 version 值，在提交更新时，若刚才读取到的 version 值为当前数据库中的 version 值相等时才更新，否则重试更新操作，直至更新成功。
+
+#### 1.1.2. CAS 操作
+
+　　CAS（Compare and Swap 比较并交换），当多个线程尝试使用 CAS 同时更新同一个变量时，只有其中一个线程能更新变量的值，而其他线程都失败，失败的线程并不会被挂起，而是被搞之这次竞争中失败，并可以再次尝试。
+
+　　CAS 操作中包含三个操作数 -- 需要读写的内存位置（V）、进行比较的于其原值（A）和拟写入的新值（B）。如果内存位置 V 的值与预期原值 A 相匹配，那么处理器会自动将该位置值更新为新值 B，否则处理器不做任何操作。
+
+### 1.2. 悲观锁
+
+　　悲观锁认为对于同一个数据的并发操作，一定会发生修改的，哪怕没有修改，也会认为修改。因此对于同一份数据的并发操作，悲观锁采取加锁的形式。悲观的认为，不加锁并发操作一定会出问题。
+
+　　在对任意记录进行修改前，先尝试为该记录加上排他锁（exclusive locking）。
+
+　　如果加锁失败，说明该记录正在被修改，那么当前查询可能要等待或者抛出异常。具体响应方式由开发者根据实际需要决定。
+
+　　如果成功加锁，那么就可以对记录做修改，事务完成后就会解锁了。
+
+　　期间如果有其他对该记录做修改或加排他锁的操作，都会等待解锁或直接抛出异常。
 
 ![](image/悲观锁和乐观锁.png)
 
@@ -124,6 +198,8 @@ public class AtomicInteger extends Number implements java.io.Serializable {
 
 　　而为了让当前线程 “ 稍等一下 ”，需让当前线程进行自旋，如果在自旋完成后前面锁定同步资源的线程已经释放了锁，那么当前线程就可以不必阻塞而是直接获取同步资源，从而避免切换线程的开销。这就是自旋锁。
 
+　　在 Java 中，自旋锁是指尝试获取锁的线程不会立即阻塞，而是采用玄幻的方式去尝试获取锁，这样的好处是减少线程上下文切换的消耗，缺点是循环会消耗 CPU。
+
 ![](image/自旋锁.png)
 
 　　自旋锁本身是优缺点的，它不能代替阻塞。自旋等待虽然避免了线程切换的开销，但它要占用处理器时间。如果锁被占用的时间很短，自旋等待的效果就会非常好。反之，如果锁被占用的时间很长，那么自旋的线程只会白浪费处理器资源。所以，自旋等待的时间必须要有一定的限度，如果自旋超过了限定次数（默认是 10 次，可以使用 -XX:PreBlockSpin 来更改）没有成功获得锁，就应当挂起线程。
@@ -150,6 +226,8 @@ public class AtomicInteger extends Number implements java.io.Serializable {
 ## 3. 无锁 VS 偏向锁 VS 轻量级锁 VS 重量级锁
 
 　　这四种锁是指所得状态，专门针对 synchronzied 的。
+
+　　在 Java 5 通过引入锁升级的机制来实现高效 synchronzied。这三种锁的状态是通过对象监视器在对象头中的字段来表明的。 
 
 　　首先为什么 syynchronized 能实现线程同步？
 
@@ -204,7 +282,7 @@ public class AtomicInteger extends Number implements java.io.Serializable {
 
 ### 轻量级锁
 
-　　是指锁是偏向锁的时候，被另外的线程所访问，偏向锁就会升级为轻量级锁，其他线程会通过自旋的形式尝试获取锁，不会阻塞，从而提高性能。
+　　轻量级锁是指锁是偏向锁的时候，被另外的线程所访问，偏向锁就会升级为轻量级锁，其他线程会通过自旋的形式尝试获取锁，不会阻塞，从而提高性能。
 
 　　在代码进入同步块的时候，如果同步对象锁状态为无锁状态（锁标志位为 “ 01 ” 状态，是否为偏向锁为 “0”），虚拟机首先将在当前线程的栈帧中建立一个名为锁记录（Lock Record）的空间，用于存储锁对象目前的 Mark Word 的拷贝，然后拷贝对象头中的 Mark Word 复制到锁记录中。
 
@@ -218,7 +296,9 @@ public class AtomicInteger extends Number implements java.io.Serializable {
 
 ### 重量解锁
 
-　　升级为重量级锁时，锁标志的状态值变为 "10"，此时 Mark Word 中存储的是指向重量级锁的指针，此时等待锁的线程都会进入阻塞状态。
+　　重量级锁是指当锁升级为重量级锁时，锁标志的状态值变为 "10"，此时 Mark Word 中存储的是指向重量级锁的指针，此时等待锁的线程都会进入阻塞状态。
+
+　　重量级锁是指当锁为轻量级锁的时候，另一个线程对然是自旋，但自旋不会一直持续下去，当自旋一定次数的时候，还没有获取到锁，就会进入阻塞，该锁膨胀为重量级锁。重量级锁会让他申请的线程进入阻塞，性能降低。
 
 　　整体的锁状态升级流程图下：
 
@@ -230,7 +310,7 @@ public class AtomicInteger extends Number implements java.io.Serializable {
 
 　　公平锁是指多个线程按照申请所得顺序来获取锁，线程直接进入队列中排队，队列中的第一个线程才会获得锁。公平锁的优点是等待锁的线程不会饿死。缺点是整体吞吐效率相对非公平锁要低，等待队列中除了第一个线程以外的所有线程都会阻塞，CPU 唤醒阻塞线程的开销比非公平锁大。
 
-　　非公平锁是多个线程加锁时直接尝试获取锁，获取不到才会到等待队列的队尾等待。但如果此时锁刚好可用，那么这个线程可以无需阻塞直接获取到锁，所以非公平锁有可能出现后申请锁的线程先获取锁的场景。非公平锁的优点是可以减少唤醒线程的开销，整体的吞吐效率高，因为线程有几率不阻塞直接获得锁，CPU 不必唤醒所有线程。缺点是处于等待队列中的线程可能会饿死，或者等很久才会获得锁。
+　　非公平锁是多个线程加锁时直接尝试获取锁，获取不到才会到等待队列的队尾等待。但如果此时锁刚好可用，那么这个线程可以无需阻塞直接获取到锁，所以非公平锁有可能出现后申请锁的线程先获取锁的场景。有可能，会造成优先级反转或者饥饿现象。非公平锁的优点是可以减少唤醒线程的开销，整体的吞吐效率高，因为线程有几率不阻塞直接获得锁，CPU 不必唤醒所有线程。缺点是处于等待队列中的线程可能会饿死，或者等很久才会获得锁。有
 
 　　用一个例子来讲述一下公平锁和非公平锁。
 
@@ -241,6 +321,10 @@ public class AtomicInteger extends Number implements java.io.Serializable {
 　　但是对于非公平锁，管理员对打水的人没有要求。及时等待队列里有排队等待的人，但如果在上一个人刚打完睡把锁还给管理员而且管理员还没有允许等待队伍里下一个人去打水时，正好来了一个插队的人，这个插队的人是可以直接从管理员那里拿到锁去打水，不需要排队，原本排队等待的人只能继续等待。如下图所示：
 
 ![](image/非公平锁.png)
+
+　　对于 Java ReentrantLock 而言，通过构造函数指定该锁是否是公平锁，默认是非公平锁。非公平锁的有点在于吞吐量比公平锁大。
+
+　　对于 synchronzied 而言，也是一种非公平锁。由于其并不像 ReentrantLock 是通过 AQS 的来实现线程调度，所以并没有任何方法使其变成公平锁。
 
 　　接下来通过 ReentrantLock 的源码来讲解公平锁和非公平锁。
 
@@ -323,6 +407,7 @@ public class ReentrantLock implements Lock, java.io.Serializable {
             return false;
         }
     }
+
 ```
 
 
@@ -363,9 +448,7 @@ public class ReentrantLock implements Lock, java.io.Serializable {
         }
 ```
 
-　　通过上面的源代码对比，可以明显的看出
-
-
+　　通过上面的源代码对比，可以明显的看出公平锁与非公平锁的 lock() 方法唯一的区别就在于公平锁在获取同步状态时多了一个限制条件：hasQueuedPredecessors() 。
 
 ```java
 // AbstractQueuedSynchronzier.java
@@ -386,11 +469,411 @@ public class ReentrantLock implements Lock, java.io.Serializable {
     }
 ```
 
+　　再进入 hashQueuedPredecessors()，可以看到该方法主要做一件事情：主要是判断当前线程是否位于同步队列中的第一个。如果是则返回 true，否则返回 false。
 
+　　综上，公平锁就是通过同步队列来实现多个线程按照申请锁的顺序来获取锁，从而实现公平的特性。非公平锁加锁时不考虑排队等待问题，直接尝试获取锁，所以存在后申请却先获得锁的情况。
 
 ## 5. 可重入锁 VS 非可重入锁
 
+　　可重入锁又名递归锁，是指在同一个线程在外层方法获取锁的时候，在进入该线程的内层方法会自动获取锁（前提锁对象得是同一个对象或者 class），不会因为之前已经获取过还没释放而阻塞。Java 中 ReentrantLock 和 synchronized 都是可重入锁，可重入锁的一个优点是可一定程度避免死锁。
+
+　　对于 Java ReentrantLock 而言，从名字就可以看出是一个重入锁，其名字是 Re entrant Lock 重新进入锁。
+
+　　对于 synchronzied 而言，也是一个可重入锁。可重入锁的一个好处是可一定程度避免死锁。
+
+　　下面用示例代码来进行分析：
+
+```java
+public class Widget {
+    public synchronized void doSomething(){
+        System.out.println("方法 1 执行...");
+        doOthers();
+    }
+
+    public synchronized void doOthers(){
+        System.out.println("方法 2 执行...");
+    }
+}
+```
+
+　　在上面的代码中，类中的两个方法都是被内置锁 synchronized 修饰的，doSomething() 方法中调用 doOthers() 方法。因为内置锁是可重入的，所以同一个线程在调用 doOthers() 时可以直接获得当前对象的锁，进入 doOthers() 进行操作。
+
+　　如果是一个不可重入锁，那么当前线程在调用 doOthers() 之前需要将执行 doSomething() 时获取当前对象的锁释放掉，实际上该对象锁已被当前线程所持有，且无法释放。所以此时会出现死锁。
+
+　　而为什么可重入锁就可以在在嵌套调用时可以自动获得锁呢？通过图示和源码来分别解析一下。
+
+　　有多个人在排队打水，此时管理员允许锁和同一个人的多个水桶绑定。这个人用多个水桶打水时，第一个水桶和锁绑定并打完水之后，第二个水桶也可以直接和锁绑定并开始打水，所有的水桶都打完水之后打水人才会将锁还给管理员。这个人的所有打水流程都能够成功执行，后续等待的人也能够打到水。这就是可重入锁。
+
+![](image/可重入锁.png)
+
+　　但如果是非重入锁的话，此时管理员只允许锁和同一个人的一个水桶绑定。第一个水桶和锁绑定打完水之后并不会释放锁，倒是第二个水桶不能和锁绑定也无法打水。当前线程出现死锁，整个等待队列中的所有线程都无法被唤醒。
+
+![](image/非可冲入锁.png)
+
+　　之前说过 ReentrantLock 和 synchronized 都是重入锁，那么通过重入锁 ReentrantLock 以及非可重入锁 NonReentrantLock 的源码来对比分析一下为什么非可重入锁在重复覅用同步资源时会出现死锁。
+
+　　首先 ReentrantLock 和 NonTrrntrantLock 都继承父类 AQS，其父亲 AQS 中维护了一个同步状态 status 来计数重入次数，status 初始值为 0。
+
+　　当线程尝试获取锁时，可重入锁先尝试获取并更新 status 值，如果 status == 0 表示没有其他线程在执行同步代码，则把 status 置为 1，当前线程开始执行。如果 status != 0 ，则判断当前线程是否是获取到这个锁的线程，如果是的话执行 status+1，且当前线程可以再次获取锁。而非可重入锁时直接去获取并尝试更新当前 status 的值，如果 status != 0 的话会导致其获取锁失败，当前线程阻塞。
+
+　　释放锁时，可重入锁同样先获取当前 status 的值，在当前线程是持有锁的线程的前提下。如果 status-1 == 0，则表示当前线程所有重复获取锁的操作都以及执行完毕，然后该线程才能真正释放锁，而非可重入锁则是在确定当前线程是持有锁的线程之后，直接将 status 置为 0，将锁释放。
+
+```java
+//ReentrantLock.java 可重入锁
+/**
+ * Performs non-fair tryLock.  tryAcquire is implemented in
+ * subclasses, but both need nonfair try for trylock method.
+ */
+@ReservedStackAccess
+final boolean nonfairTryAcquire(int acquires) {
+    final Thread current = Thread.currentThread();
+    int c = getState();
+    if (c == 0) {
+        if (compareAndSetState(0, acquires)) {
+            setExclusiveOwnerThread(current);
+            return true;
+        }
+    }
+    else if (current == getExclusiveOwnerThread()) {
+        // 获取锁时先判断，如果房前线程就是已经占有锁的线程，则 status 值 +1，并且返回 true。
+        int nextc = c + acquires;
+        if (nextc < 0) // overflow
+            throw new Error("Maximum lock count exceeded");
+        setState(nextc);
+        return true;
+    }
+    return false;
+}
+
+        @ReservedStackAccess
+        protected final boolean tryRelease(int releases) {
+            // 释放锁时也是先判断但钱线程是否时已占有锁的线程，然后再判断 status。如果 status 等于 0，才真正的释放锁。
+            int c = getState() - releases;
+            if (Thread.currentThread() != getExclusiveOwnerThread())
+                throw new IllegalMonitorStateException();
+            boolean free = false;
+            if (c == 0) {
+                free = true;
+                setExclusiveOwnerThread(null);
+            }
+            setState(c);
+            return free;
+        }
+```
+
+ 
+
+```java
+// 非可重入锁
+protected boolean tryAcquire(int acquires) {
+    // 非可重入锁是直接尝试获取锁
+	if (this.compareAndSetStatues(0,1)){
+		this.owner = Thread.currentThread;
+		return true;
+	} else {
+		return false;
+	}
+}
+
+protected boolean tryRelease(int releases){
+	if (Thread.currentThread() != this.owner){
+		throw new IllegalMonitorStateException();
+	} else {
+		this.owner = null;
+        // 释放锁时也是直接将 status 置为 0
+		this.setState(0);
+		return true;
+	}
+}
+```
+
+
+
 ## 6. 独享锁 VS 共享锁
+
+　　独享锁和共享锁同样是一种概念。
+
+　　独享锁也叫排他锁，是指该锁一次只能被一个线程所持有。如果线程 T 对数据 A 加上排他锁后，则其他线程不能再对 A 加任何类型的锁。获得排他锁的线程既能读取数据又能修改数据。JDK 中的 synchronzied 和 JUC 中 Lock 的实现类就是互斥锁。
+
+　　共享锁是指该锁可被多个线程所持有。如果线程 T 对数据 A 加上共享锁后，则其他线程只能对 A 再加共享锁，不能加排他锁。获得共享锁的线程只能读数据，不能修改数据。
+
+　　独享锁与共享锁也是通过 AQS 来实现的，通过实现不同的方法，来实现独享或者共享。
+
+
+
+　　对于 Java ReentrantLock 而言，其是独享锁。但是对于 Lock 的另一个实现类 ReadWriteLock，其读锁是共享锁，其写锁是独享锁。
+
+　　读锁的共享锁可保证并发读是非常高效的，读写、写读、谢谢的过程是互斥的。
+
+　　独享锁与共享锁也是通过 AQS 来实现的，通过实现不同的方法，来实现独享或者共享。
+
+　　对于 synchronized 而言，当然是独享锁。
+
+
+
+　　下面为 ReentrantReadWriteLock 的部分源码：
+
+```java
+public class ReentrantReadWriteLock
+        implements ReadWriteLock, java.io.Serializable {
+    private static final long serialVersionUID = -6992448646407690164L;
+    /** Inner class providing readlock */
+    private final ReentrantReadWriteLock.ReadLock readerLock;
+    /** Inner class providing writelock */
+    private final ReentrantReadWriteLock.WriteLock writerLock;
+    /** Performs all synchronization mechanics */
+    final Sync sync;
+
+    /**
+     * Creates a new {@code ReentrantReadWriteLock} with
+     * default (nonfair) ordering properties.
+     */
+    public ReentrantReadWriteLock() {
+        this(false);
+    }
+
+    /**
+     * Creates a new {@code ReentrantReadWriteLock} with
+     * the given fairness policy.
+     *
+     * @param fair {@code true} if this lock should use a fair ordering policy
+     */
+    public ReentrantReadWriteLock(boolean fair) {
+        sync = fair ? new FairSync() : new NonfairSync();
+        readerLock = new ReadLock(this);
+        writerLock = new WriteLock(this);
+    }
+
+    public ReentrantReadWriteLock.WriteLock writeLock() { return writerLock; }
+    public ReentrantReadWriteLock.ReadLock  readLock()  { return readerLock; }
+
+    public static class ReadLock implements Lock, java.io.Serializable {
+        private static final long serialVersionUID = -5992448646407690164L;
+        private final Sync sync;
+
+        /**
+         * Constructor for use by subclasses.
+         *
+         * @param lock the outer lock object
+         * @throws NullPointerException if the lock is null
+         */
+        protected ReadLock(ReentrantReadWriteLock lock) {
+            sync = lock.sync;
+        }
+    }
+    
+    public static class WriteLock implements Lock, java.io.Serializable {
+        private static final long serialVersionUID = -4992448646407690164L;
+        private final Sync sync;
+
+        /**
+         * Constructor for use by subclasses.
+         *
+         * @param lock the outer lock object
+         * @throws NullPointerException if the lock is null
+         */
+        protected WriteLock(ReentrantReadWriteLock lock) {
+            sync = lock.sync;
+        }
+    }
+    
+}
+```
+
+　　可以看到 ReentrantReadWriteLock 有两把锁：ReadLock 和 WriteLock，由词知意，一个读锁一个写锁，合称 “ 读写锁 ”。再进一步观察可以发现 ReadLock 和 WriteLock 是靠内部类 Sync 实现的锁。Sync 是 AQS 的一个子类，这种结构在 CountDownLatch、ReentrantLock、Semaphore 里面也都存在。
+
+ 　　在 ReentrantReadWriteLock 里面，读锁和写锁的锁主体都是 Sync，但读锁和写锁的加锁方式不一样。读锁是共享锁，写锁是独享锁。读锁的共享锁可保证并发读非常高效，而读写、写读、写写的过程互斥，因为读锁和写锁是粉里的。所以 ReentrantReadWriteLock 的并发性相比一般的互斥锁有了很大提升。
+
+　　那读锁和写锁的具体加锁方式有什么区别呢？早了解源码之前需要回顾一下其他知识。
+
+　　在最开始提及 AQS 的时候也提到了 state 字段（int 类型，32 位），该字段用来描述有多少线程获持有锁。
+
+　　在独享锁中这个值通常是 0 或者 1（如果是重入锁的话 state 值就是重入的次数），在共享锁中 state 就是持有锁的数量。但是在 ReentrantReadWriteLock 中有读、写两把锁，所以需要在一个整型变量 state 上分别描述读锁和写锁的数量（或者也可以叫状态）。于是将 state 变量 “按位切割” 切分成了两个部分，高 16 位标识读锁状态（读锁个数），低 16 位标识写锁状态（写锁个数）。如下图所示：
+
+![](image/state.png)
+
+　　了解了概念之后才来看代码，先看写锁的加锁源码：
+
+```java
+// Sync class
+@ReservedStackAccess
+protected final boolean tryAcquire(int acquires) {
+    /*
+     * Walkthrough:
+     * 1. If read count nonzero or write count nonzero
+     *    and owner is a different thread, fail.
+     * 2. If count would saturate, fail. (This can only
+     *    happen if count is already nonzero.)
+     * 3. Otherwise, this thread is eligible for lock if
+     *    it is either a reentrant acquire or
+     *    queue policy allows it. If so, update state
+     *    and set owner.
+     */
+    Thread current = Thread.currentThread();
+    // 取得当前锁的个数
+    int c = getState();
+    // 取写锁的个数 w
+    int w = exclusiveCount(c);
+    // 如果已经有线程持有了锁（c!=0）
+    if (c != 0) {
+        // (Note: if c != 0 and w == 0 then shared count != 0)
+        // 如果写线程数（w）为 0（换言之存在读锁）或者持有锁的线程不是当前线程就返回失败
+        if (w == 0 || current != getExclusiveOwnerThread())
+            return false;
+        // 如果写入锁的数量大于最大数（65535，2 的 16 次方 -1）就抛出一个 Error
+        if (w + exclusiveCount(acquires) > MAX_COUNT)
+            throw new Error("Maximum lock count exceeded");
+        // Reentrant acquire
+        setState(c + acquires);
+        return true;
+    }
+    // 如果当且写线程数为 0，并且当前线程需要阻塞那么就返回失败；或者如果通过 CAS 增加写线程数失败也返回失败。
+    if (writerShouldBlock() ||
+        !compareAndSetState(c, c + acquires))
+        return false;
+    // 如果 c =0,w=0 或者 c>0,w>0（重入），则设置当前线程或锁的拥有者
+    setExclusiveOwnerThread(current);
+    return true;
+}
+```
+
+* 这段代码首先取到当前锁的个数 c，然后再通过 c 来获取写锁的个数 w。因为写锁是低 16 位，所以取低 16 位的最大值与当前的 c 做与运算（int w = exclusiveCount(c);），高 16 位和 0 与运算后是 0，剩下的就是低位运算的值，同时也是持有写锁的线程数目。
+* 在取到写锁线程的数目后，首先判断是否已经有线程持有了锁。如果已经有线程持有了锁（c != 0），则查看当前写锁线程的数目，如果写线程数为 0（即此时存在读锁）或者持有锁的线程不是当前线程就返回失败（涉及到公平锁和非公平锁的实现）。
+* 如果写入锁的数量大于最大数（65535，2 的 16 次方 -1）就抛出一个 Error。
+* 如果当且写线程数为 0 （那么读线程也应该为 0，因为上面已经处理 c!=0 的情况），并且当前线程需要阻塞那么就返回失败；如果通过 CAS 增加写线程失败也返回失败。
+* 如果 c=0，w=0 或者 c>0，w>0（重入），则设置当前线程或锁的拥有者，返回成功！
+
+　　tryAcquire() 除了重入条件（当前线程为获取了写锁的线程）之外，增加了一个读锁是否存在的判断。如果存在读锁，则写锁不能被获取，原因在于：必须确保写锁的操作对读锁可见，如果允许读锁再已被获取的情况下对写锁的获取，那么正在运行的去哦他读锁线程就无法感知到当前写线程的操作。
+
+　　因此，只有等待其他读线程都释放了读锁，写锁才能被当前线程获取，而写锁一旦被获取，则其他读写线程的后续访问均被阻塞。写锁的释放与 ReentrantLock 的释放过程基本类似，每次释放菌减少写状态，当写状态为 0 时标识写锁已被释放，然后等待的读写线程才能够继续访问读写锁，同时前次写线程的修改对后续的读写线程可见。
+
+　　接着时读锁的代码：
+
+```java
+        @ReservedStackAccess
+        protected final int tryAcquireShared(int unused) {
+            /*
+             * Walkthrough:
+             * 1. If write lock held by another thread, fail.
+             * 2. Otherwise, this thread is eligible for
+             *    lock wrt state, so ask if it should block
+             *    because of queue policy. If not, try
+             *    to grant by CASing state and updating count.
+             *    Note that step does not check for reentrant
+             *    acquires, which is postponed to full version
+             *    to avoid having to check hold count in
+             *    the more typical non-reentrant case.
+             * 3. If step 2 fails either because thread
+             *    apparently not eligible or CAS fails or count
+             *    saturated, chain to version with full retry loop.
+             */
+            Thread current = Thread.currentThread();
+            int c = getState();
+            if (exclusiveCount(c) != 0 &&
+                getExclusiveOwnerThread() != current)
+                return -1;
+            int r = sharedCount(c);
+            if (!readerShouldBlock() &&
+                r < MAX_COUNT &&
+                compareAndSetState(c, c + SHARED_UNIT)) {
+                if (r == 0) {
+                    firstReader = current;
+                    firstReaderHoldCount = 1;
+                } else if (firstReader == current) {
+                    firstReaderHoldCount++;
+                } else {
+                    HoldCounter rh = cachedHoldCounter;
+                    if (rh == null ||
+                        rh.tid != LockSupport.getThreadId(current))
+                        cachedHoldCounter = rh = readHolds.get();
+                    else if (rh.count == 0)
+                        readHolds.set(rh);
+                    rh.count++;
+                }
+                return 1;
+            }
+            return fullTryAcquireShared(current);
+        }
+```
+
+　　可以看到在 tryAcquireShred(int unused) 方法中，如果其他线程已经获取了写锁，则当前线程获取读锁失败，进入等待状态。如果当前线程获取了写锁或者写锁违背获取，则当前线程（线程安全，依靠 CAS 保证）增加读状态，成功获取读锁。读锁的每次释放（线程安全的，可能有多个读线程同时释放读锁）均减少读状态，减少的值是 “1<<16”。所以读写锁才能实现读读的过程共享，而读写、写读、写写的过程互斥。
+
+　　此时，再回头看一下互斥锁 ReentrantLock 中公平锁和非同屏所的加锁源码：
+
+```java
+// 公平锁
+protected final boolean tryAcquire(int acquires) {
+            final Thread current = Thread.currentThread();
+            int c = getState();
+            if (c == 0) {
+                // hasQueuedPredecessors() 查询是否有任何线程等待获取的时间超过当前线程。
+                if (!hasQueuedPredecessors() &&
+                    compareAndSetState(0, acquires)) {
+                    setExclusiveOwnerThread(current);
+                    return true;
+                }
+            }
+            else if (current == getExclusiveOwnerThread()) {
+                int nextc = c + acquires;
+                if (nextc < 0)
+                    throw new Error("Maximum lock count exceeded");
+                setState(nextc);
+                return true;
+            }
+            return false;
+        }
+```
+
+
+
+```java
+        // 非公平锁
+        @ReservedStackAccess
+        final boolean nonfairTryAcquire(int acquires) {
+            final Thread current = Thread.currentThread();
+            int c = getState();
+            if (c == 0) {
+                if (compareAndSetState(0, acquires)) {
+                    setExclusiveOwnerThread(current);
+                    return true;
+                }
+            }
+            else if (current == getExclusiveOwnerThread()) {
+                int nextc = c + acquires;
+                if (nextc < 0) // overflow
+                    throw new Error("Maximum lock count exceeded");
+                setState(nextc);
+                return true;
+            }
+            return false;
+        }
+```
+
+　　发现公平锁和非公平锁如果在当前线程不是拥有锁的线程时，就不能添加锁，所以它们添加的都是独享锁。
+
+　　发现在 ReentrantLock 虽然有公平锁和非公平锁两种，但是它们添加的都是独享锁。根据源码所示，当某一个线程调用 lock 方法获取锁是，如果同步资源没有被其他线程锁住，那么当前线程在使用 CAS 更新 state 成功后就会成功抢占该资源。而如果公共资源被占用且不能被当前线程占用，那么就会加锁失败。所以可以确定 ReentrantLock 无论读操作还是写操作，添加的锁都是独享锁。
+
+## 7. 互斥锁 / 读写锁
+
+　　上面讲的独享锁/共享锁是一种广义的说法，互斥锁/读写锁就是具体的实现。
+
+　　互斥锁在 Java 中的具体实现就是 ReentrantLock。
+
+　　读写锁在 Java 中的具体实现就是 ReadWriteLock。
+
+## 8. 分段锁
+
+　　分段锁其实是一种锁的设计，并不是具体的一种锁，对于 ConcurrentHashMap 而言，其并发的实质就是通过分段锁的形式来实现高效的并发操作。
+
+　　以 ConcurrentHashMap 来说一下分段锁的含义以及设计思想，ConcurrentHashMap 中的分段锁称为 Segment，它即类似于 HashMap（JDK 7 和 JDK 8 中 HashMap 的实现）的结构，即内部拥有一个 Entry 数组，数组中的每个元素又是一个链表；同时又是一个 ReentrantLock（Segment 继承了 ReentrantLock）。
+
+　　当需要 put 元素的时候，并不是对整个 hashmap 进行加锁，而是先通过 hashCode 来知道他要放在哪一个分段中，然后对这个分段进行加锁，所以当多线程 put 的时候，只要不是放在一个分段中，就实现了真正的并行的插入。
+
+　　但是，在统计 size 的时候，可就是获取 hashmap 全局信息的时候，就需要获取所有的分段锁才能统计。
+
+　　分段锁的设计目的是细化锁的粒度，当操作不需要更新整个数组的时候，就仅仅针对数组中的一项进行加锁操作。
+
+## 9. 
 
 
 
