--- a/Java/线程/使用信号量实现生产者-消费者模式.md
+++ b/Java/线程/使用信号量实现生产者-消费者模式.md
@@ -10,7 +10,25 @@
 
 　　注意，不能先对缓冲区进行加锁，再测试信号量。也就是说，不能先执行 down(mutex) 再执行 down(empty)。如果这么做了，那么可能会出现这种情况：生产者对缓冲区加锁后，执行 down(empty) 操作，发现 empty = 0，此时生产者睡眠。消费者不能进入临界区，因为生产者对缓冲区加锁了，消费者就无法执行 up(empty) 操作，empty 永远都为 0 ，导致生产者永远等待下去，不会释放锁，消费者因此也会永远等待下去。
 
+　　信号量 Semaphore，跟交通信号等非常类似（Semaphore 翻译过来就是信号灯的意思），以下面这幅图为例：
 
+![](image/信号量1.png)　　如果两个铁轨都是空的，那么此时信号灯是绿色（信号量为 2），允许火车通行。如果有列车请求通行则放行，同时信号灯变为黄色（信号量减一）：
+
+![](image/信号量2.png)
+
+　　当两条铁轨都有列车通行时，信号灯为红色（信号量为 0），不允许火车通过。如果有列车请求通行，则阻塞：
+
+![](image/信号量3.png)
+
+　　当一辆列车离开轻轨后，信号灯变为黄色（信号量为 1），此时等待的通行的列车被放行：
+
+![](image/信号量4.png)
+
+![](image/信号量5.png)
+
+　　这里先用一个二进制信号量来等效互斥操作。
+
+　　由于信号量只能通过 0 值来进行阻塞和唤醒，所以这里必须使用两个信号量来模拟容器空和容器满两种状态。
 
 ```java
 public class Cache {
