--- a/Java/线程/使用管程实现生产者-消费者模式.md
+++ b/Java/线程/使用管程实现生产者-消费者模式.md
@@ -1,6 +1,12 @@
 # 使用管程实现生产者-消费者模式
 
-　　管程
+　　使用信号量机制实现的生产者消费者问题需要客户端代码做很多控制，而管程把控制的代码独立出来，不仅不同意出错，也是扽客户端代码调用更容易。
+
+　　管程有一个重要特性：在一个时刻只能有一个进程使用管程。进程在无法继续执行的时候不能一直占用管程，否则其他进程永远不能使用管程。
+
+　　管程引入了条件变量以及相关的操作：wait() 和 signal() 来实现同步操作。对条件变量执行 wait() 操作会导致调用进程阻塞，把管程让出来给另一个进程持有。signal() 操作用于唤醒被阻塞的进程。
+
+## 使用管程实现生成这-消费者问题
 
 
 ## 参考文章
