--- a/Java/线程/哲学家就餐问题.md
+++ b/Java/线程/哲学家就餐问题.md
@@ -15,6 +15,20 @@
 1. 必须同时拿起左右两根筷子；
 2. 只有在两个邻居都没有进餐的情况下才允许进餐。
 
+　　哲学家就餐问题是 1965 年由 Dijkstra 提出的一种线程同步的问题。
+
+　　问题描述：一圆桌前坐着 5 位哲学家，两个人中间有一只筷子，桌子中央有面条，哲学家思考问题，当饿了的时候拿起左右两只筷子吃饭，必须拿到两只筷子才能吃饭。上述问题会产生死锁的情况，当 5 个哲学家都拿起自己右手边的筷子，准备拿左手边的筷子时产生死锁。
+
+　　解决办法：
+
+1. 添加一个服务生，只有当经过服务生同意之后才能拿筷子，服务生负责避免死锁产生。
+2. 每个哲学家必须确定自己左右手的筷子都可用的时候，才能同时拿起两只筷子进餐，吃完之后同时放下两只筷子。
+3. 规定每个哲学家拿筷子时必须拿序号小的那只，这样最后一位未拿到筷子的哲学家只剩下序号大的那只筷子，不能拿起，剩下的这只筷子就可以被其他哲学家使用，避免了死锁。这种情况不能很好的利用资源。
+
+## 代码实现：实现第 2 种方案
+
+
+
 
 ## 参考文章
 1. [JAVA多线程学习--哲学家就餐问题](https://www.cnblogs.com/vettel/p/3438257.html)
