--- a/Java/线程/读者写者问题.md
+++ b/Java/线程/读者写者问题.md
@@ -4,6 +4,22 @@
 
 　　一个整形变量 count 记录在对数据进行读操作的进程数量，一个互斥量 count_mutex 用于对 count 加锁，一个互斥量 data_mutex 用于对读写的数据加锁。
 
+## 题目
+
+　　这是一个非常经典的题目，题目大意如下：有一个写者很多读者，多个读者可以同时读文件，但写者在写文件时不允许有读者在读文件，同样有读者读时也不能写。
+
+## 思路
+
+　　利用 java.util.concurrent.locks.ReentrantReadWriteLock（读写锁）。
+
+　　写者写文件时持有写锁，此时只能有唯一一个写者写文件，且读者不能读文件。
+
+　　读者读文件时持有读锁，此时多个读者可以同时读取文件，但写者不能写文件。
+
+## 实现
+
+
+
 
 ## 参考文章
 1. [Java并发-读者写者问题](https://blog.csdn.net/weixin_36210698/article/details/80900577)
