--- a/Android/view/事件分发机制.md
+++ b/Android/view/事件分发机制.md
@@ -33,9 +33,11 @@ button.setOnTouchListener(new OnTouchListener() {
 
 ## 源码分析
 
+### 1. 点击事件
+
 　　只要触摸到了任何一个控件，就一定会调用该控件的 dispatchTouchEvent 方法。当去点击按钮的时候，就会去调用 Button 类里的 dispatchTouchEvent 方法，其实调用的是 View 里的 dispatchToucheEvent 方法。
 
-### 1. View#dispatchTouchEvent
+#### 1.1. View#dispatchTouchEvent
 
 ```java
     /**
@@ -131,7 +133,7 @@ button.setOnTouchListener(new OnTouchListener() {
 
 　　第三个条件 li.mOnTouchListener.onTouch(this, event) 其实就是去回调控件注册 touch 事件时的 onTouch 方法。也就是说如果在 onTouch 方法里返回 true，就会让这三个条件全部成立，从而整个方法直接返回 true。如果在 onTouch 方法里返回 false，就会再去执行 onTouchEvent(event) 方法。
 
-### 2. View#onTouchEvent
+#### 1.2. View#onTouchEvent
 
 ```java
     public boolean onTouchEvent(MotionEvent event) {
@@ -299,9 +301,98 @@ button.setOnTouchListener(new OnTouchListener() {
     }
 ```
 
-　　在 View 的 onTouchEvent() 方法中如果
+　　在 View 的 onTouchEvent() 方法中如果该控件是可以点击的就会进入到 switch 判断中去，而如果当前的时间是抬起手指，则会进入到 MotionEvent.ACTION_UP 这个 case 当中。在经过种种判断之后，会执行到 performClick() 方法。
+
+#### 1.3. View#performClick()
+
+```java
+    public boolean performClick() {
+        final boolean result;
+        final ListenerInfo li = mListenerInfo;
+        if (li != null && li.mOnClickListener != null) {
+            playSoundEffect(SoundEffectConstants.CLICK);
+            li.mOnClickListener.onClick(this);
+            result = true;
+        } else {
+            result = false;
+        }
+
+        sendAccessibilityEvent(AccessibilityEvent.TYPE_VIEW_CLICKED);
+
+        notifyEnterOrExitForAutoFillIfNeeded(true);
+
+        return result;
+    }
+```
+
+　　可以看到，只要 mOnClickListener 不是 null，就会去调用它的 onClick 方法，那 mOnClickListener 又是在哪里赋值的？查看 setOnClickListener 方法。
+
+#### 1.4. View#setOnClickListener
+
+```java
+    public void setOnClickListener(@Nullable OnClickListener l) {
+        if (!isClickable()) {
+            setClickable(true);
+        }
+        getListenerInfo().mOnClickListener = l;
+    }
+```
+
+　　当通过调用 setOnClickListener 方法来给控件注册一个点击事件时，就会给 mOnClickListener 赋值。然后每当空间被点击时，都会在 performClick() 方法里回调被点击控件的 onClick 方法。
+
+### 2. touch 事件的层级传递
+
+　　如果给一个控件注册了 touch 事件，每次点击它的时候都会触发一系列的 ACTION_DOWN、ACTION_MOVE、ACTION_UP 等事件。这里需要注意，如果在执行 ACTION_DOWN 的时候返回了 false，后面一系列其他的 action 就不会再得到执行了。简单地说，就是当 dispatchTouchEvent 在进行事件分发的时候，只有前一个 action 返回 true，才会触发后一个 action。
+
+　　前面的例子中，明明在 onTouch 事件里面返回了 false，ACTION_DOWN 和 ACTION_UP 也得到执行了？参考前面分析的源码，首先在 onTouchEvent 方法的细节。由于点击了按钮，就会进入到 `if (clickable || (viewFlags & TOOLTIP) == TOOLTIP)` 这个 if 判断中，然后不管当前的 action 是什么，最后都一定会走到最后返回一个 true。
+
+　　明明在 onTouch 事件里返回了 false，系统还是在 onTouchEvent 方法中返回了 true。就因为这个原因，才使得前面的例子中 ACTION_UP 可以得到执行。
+
+　　那可以换一个控件，将按钮替换成 ImageView，然后给它也注册一个 touch 事件，并返回 false。如下所示：
+
+```java
+imageView.setOnTouchListener(new OnTouchListener() {
+	@Override
+	public boolean onTouch(View v, MotionEvent event) {
+		Log.d("TAG", "onTouch execute, action " + event.getAction());
+		return false;
+	}
+});
+```
+
+　　运行一下程序，点击 ImageView，会发现结果如下：
+
+````
+onTouch execute, action 0
+````
+
+　　在 ACTION_DOWN 执行完后，后面的一系列 action 都不会得到执行了。这又是为什么呢？因为 ImageView 和按钮不同，它是默认不可点击的，因此在 onTouchEvent 的  `if (clickable || (viewFlags & TOOLTIP) == TOOLTIP)` 这个 if 判断无法进入 if 的内部，直接跳过返回了 false，也就导致后面其他的 action 都无法执行了。
+
+## onTouch 和 onTouchEvent 有什么区别，又该如何使用？
+
+　　从源码中可以看出，这两个方法都是在 View 的 dispatchTouchEvent 中调用的，onTouch 优先于 onTouchEvent 执行。如果在 onTouch 方法中通过返回 true 将事件消费掉，onTouchEvent 将不会再执行。
+
+　　另外需要注意的是，onTouch 能够得到执行需要两个前提条件，第一 mOnTouchListener 的值不能为空，第二当前点击的控件必须是 enable 的。因此如果有一个控件是非 enable 的，那么给它注册 onTouch 事件将永远得不到执行。对于这一类控件，如果想要监听它的 touch 事件，就必须通过在该控件中重写 onTouchEvent 方法来实现。
+
+## 为什么给 ListView 引入了一个滑动菜单的功能，ListView 就不能滚动了？
+
+　　滚动菜单的功能是通过给 ListView 注册了一个 touch 事件来实现的。如果在 onTouch 方法里处理完了滑动逻辑后返回 true，那么 ListView 本身的滚动事件就被屏蔽了，自然也就无法滑动（原理同前面例子中按钮不能点击），因此解决方法就是在 onTouch 方法里返回 false。
+
+## ViewGroup 的事件分发
+
+　　ViewGroup 就是一组 View 的集合，它包含很多的子 View 和子 ViewGroup，是 Android 中所有布局的父类或间接父类，像 LinearLayout、RelativeLayout 等都是继承自 ViewGroup 的。但 ViewGroup 实际上也是一个 View，只不过比起 View，它多了可以包含子 View 和定义布局参数的功能。
+
+　　ViewGroup 继承结构示意图如下所示：
+
+![](image/ViewGroup继承结构示意图.png)
+
+　　可以看到，经常用到的各种布局，全部属于 ViewGroup 的子类。
+
+　　通过一个 Demo 来演示一下 Android 中 ViewGroup 的事件分发流程。
 
 
+
+　　
 
 
 
