--- a/项目信息/项目信息收集.md
+++ b/项目信息/项目信息收集.md
@@ -40,5 +40,6 @@ Android 音视频系列：视频容器操作篇--mp4 容器打包实现
 
 
 ## Kotlin
-1.https://www.jianshu.com/p/a05b10976b08 推荐一个 kotlin 项目
+1. https://www.jianshu.com/p/a05b10976b08 推荐一个 kotlin 项目
+2. https://www.wanandroid.com/blog/show/2774  一款高仿 Eyepetizer | 开眼短视频的 MVVM 开源项目
 
