--- a/DataStructure/数据结构/树/树的基本知识.md
+++ b/DataStructure/数据结构/树/树的基本知识.md
@@ -10,21 +10,21 @@
 
 3. 树的度：树中各结点度的最大值。
 
-* 边（Edge）、根（Root）、叶子节点（Leaf）：
+4. 边（Edge）、根（Root）、叶子节点（Leaf）
 
 ![](image/Edge-Root-Leaf.png)
 
-* 路径（Path）：
+4. 路径（Path）：
 
 ![](image/path.png)
 
-* 节点高度（Height）：
+5. 节点高度（Height）：
 
 ![](image/height.png)
 
 　　需要注意的是叶子节点的高度为 0 ，如果树只有一个节点，那么这个节点的高也为 0 。
 
-* 深度（Depth）：
+6. 深度（Depth）：
 
 ![](image/Depth.png)
 
@@ -32,7 +32,7 @@
 
 　　从 Height 和 Depth 的对比，它们的方向刚好是相反的。
 
-* 层级（Level）：
+7. 层级（Level）：
 
 ![](image/level.png)
 
@@ -48,13 +48,13 @@
 
 ## 3. 树的存储结构
 
-* 顺序存储结构：双亲存储结构，用一维数组即可实现，用数组小标表示树中的结点，数组元素的内容表示该结点的双亲结点。
+* 顺序存储结构：双亲存储结构，用一维数组即可实现，用数组下标表示树中的结点，数组元素的内容表示该结点的双亲结点。
 
 * 链式存储结构：包括孩子存储结构、孩子兄弟存储结构。
 
   孩子存储结构，实质上就是图的邻接表存储结构。
 
-## 4. 树的存储标识
+## 4. 树的存储表示
 
 ![](image/广义表表示.png)
 
@@ -70,7 +70,7 @@
 
 ![](image/树的子女兄弟表示.png)
 
-## 参考文章
+## 5. 参考文章
 
 1. [数据结构--知识点总结--树](https://blog.csdn.net/void_worker/article/details/80919901)
 2. [数据结构与算法（七）树和二叉树](https://chiclaim.blog.csdn.net/article/details/80574803)
