--- a/Java/线程/死锁.md
+++ b/Java/线程/死锁.md
@@ -1,26 +1,26 @@
 # 死锁
 
-　　死锁是这样一种情形：多个线程同时阻塞，它们中的一个或者全部都在等待某个资源被释放，由于线程被无限期地阻塞，因此程序不可能正常终止。
+## 1. 概述
 
-　　死锁是指多个进程循环等待彼此占用的资源而无限期的僵持等待下去的局面。原因是：
+　　死锁是指多个进程同时阻塞，并循环等待彼此占用的资源而无限期的僵持等待下去的局面，这样程序不可能正常终止。
+
+　　造成死锁的原因是：
 
 1. 系统提供的资源太少了，远不能满足并发进程对资源的需求。
-2. 进程推进顺序不合适，互相占用彼此需要的资源，同时请求对方占用的资源，往往是程序设计不合理。
+2. 进程推进顺序不合适，互相占用彼此需要的资源，同时请求对方占用的资源，这往往是因为程序设计不合理。
 
-## java 死锁产生的四个必要条件
+## 2. java 死锁产生的四个必要条件
 
-1. 互斥条件：即当资源被一个线程使用（占用）时，别的线程不能被使用。即某个资源在一段时间内只能由一个进程占用，不能同时被两个或两个以上的进程占用。
-2. 不可抢占条件：资源请求者不能强制从资源占用者手中夺取资源，资源只能由资源占用者主动释放。进程所获得的资源在未使用完毕之前，资源申请者不能强行的从资源占有者中夺取资源，而只能由该资源的占有者进程自行释放。
-3. 占用且等待条件：请求和保持，即当资源请求者在请求其他的资源的同时保持对原有资源的占用。进程至少已经占有了一个资源，但又申请了一个新的被其他进程所占用的资源，此时处于等待状态。
-4. 循环等待条件：即存在一个等待队列，P1 占用 P2 的资源，P2 占用 P3 的资源，P3 占用 P1 的资源。这样就形成了一个等待环路。若干个进程形成环形链，每个都占用对方申请的下一个资源。
+1. 互斥条件：即当资源被一个线程使用时，别的线程不能被使用。即某个资源在一段时间内只能由一个进程占用，不能同时被两个或两个以上的进程占用。
+2. 不可抢占条件：进程所获得的资源在未使用完毕之前，资源请求者不能强制从资源占用者手中夺取资源，资源只能由资源占用者主动释放。
+3. 请求和保持条件：占用且等待，即当资源请求者在请求其他资源的同时保持对原有资源的占用。
+4. 循环等待条件：即存在一个等待队列，P1 占用 P2 的资源，P2 占用 P3 的资源，P3 占用 P1 的资源。这样就形成了一个等待环路。也就是若干个进程形成环形链，每个都占用对方申请的下一个资源。
 
 　　当上述四个条件都成立的时候，便形成死锁。当然，死锁的情况下如果打破上述任何一个条件，便可让死锁消失。
 
-　　解决死锁问题的方法是：一种是用 synchronzied，一种是用 Lock 显式锁实现。
+## 3. 死锁示例代码
 
-## 死锁代码
-
-### 死锁发生的例子 1
+### 3.1. 死锁发生的例子 1
 
 ```java
 public class LockTest {
@@ -95,7 +95,7 @@ Thu Jun 11 15:40:10 CST 2020 LockB 锁住 obj2 LockTest.obj2
 
 　　结果显示两个线程最后都在等待对方释放锁，最近进入了死锁状态。
 
-### 死锁发生的例子 2
+### 3.2. 死锁发生的例子 2
 
 ```java
 public class TestLock {
@@ -145,61 +145,105 @@ TestClass method in
 
 　　结果显示进入两次方法，但是并没有走完，发生死锁。
 
-　　一旦出现死锁，整个程序既不会发生任何错误，也不会给出任何提示，只是所有线程处于阻塞状态，无法继续。java 悉尼及没有提供检测，也没有采取任何措施来处理死锁的情况，所以多线程编程中，必须手动应该采取措施避免死锁。
+　　一旦出现死锁，整个程序既不会发生任何错误，也不会给出任何提示，只是所有线程处于阻塞状态，无法继续。java 系统没有提供检测，也没有采取任何措施来处理死锁的情况，所以多线程编程中，必须手动采取措施避免死锁。
 
-## 避免死锁
+## 4. 解决死锁的方法
 
 　　为使系统不发生死锁，必须设法破坏产生死锁的四个必要条件之一，或者允许死锁产生，但当死锁发生时能检测出死锁，并有能力实现恢复。
 
-　　一般有死锁的预防、死锁避免、死锁检测与恢复三种方法。
+　　一般有死锁的预防、死锁避免、死锁检测与死锁解除三种方法。
 
-1. 死锁预防：破坏导致死锁必要条件中的任意一个就可以预防死锁。例如，要求用户申请资源时一次性申请所需要的全部资源，这就破坏了保持和等待的条件；将资源分层，得到上一层资源后，才能够申请下一层资源，它破坏了环路等待条件。预防通常会降低系统的效率。
-2. 死锁避免：避免时指进程在每次申请资源时判断这些操作是否安全。例如，使用银行家算法。死锁避免算法的执行会增加系统的开销。
+1. 死锁预防：破坏导致死锁必要条件中的任意一个就可以预防死锁。
+
+   例如，要求用户申请资源时一次性申请所需要的全部资源，这就破坏了保持和等待的条件；将资源分层，得到上一层资源后，才能够申请下一层资源，它破坏了环路等待条件。
+
+   预防通常会降低系统的效率。
+
+2. 死锁避免：避免是指进程在每次申请资源时判断这些操作是否安全。
+
+   例如，使用银行家算法。一个小城镇的银行家，他向一群客户分别承诺了一定的贷款额度，算法要做的是判断对请求的满足是否会进入不安全状态，如果是，就拒绝请求；否则予以分配。
+
+   死锁避免算法的执行会增加系统的开销。
+
 3. 死锁检测：死锁预防和避免都是事前措施，而死锁的检测则是判断系统是否处于死锁状态，如果是，则执行死锁解除策略。
+
 4. 死锁解除：这是与死锁检测结合使用的，它使用的方式就是剥夺，即将某进程所拥有的资源强行回收，分配给其他的进程。
 
-　　很多时候实际锁的交叉可能涉及很多个，要想很好的避免只能认工仔细检查，一旦在一个同步方法中，或者说在一个锁的保护的范围中，调用了其他对象的方法时，就要十分的小心：
+　　很多时候实际锁的交叉可能涉及很多个，要想很好的避免只能认真仔细检查，一旦在一个同步方法中，或者说在一个锁的保护的范围中，调用了其他对象的方法时，就要十分的小心：
 
 1. 如果其他对象的这个方法会消耗比较长的时间，那么就会导致锁被持有了很长的时间。
 2. 如果其他对象的这个方法是一个同步方法，那么就要注意避免发生死锁的可能性了。
 
 　　总之是尽量避免在一个同步方法中调用其他对象的延时方法和同步方法。
 
-### 死锁预防
+### 4.1. 死锁预防
 
 * 打破互斥条件：允许进程同时访问资源（有些资源就是不可以同时访问的，无实用价值）。
 * 打破不可抢占条件：比如给进程设置优先级，高优先级的可以抢占资源（实现困难，降低系统性能）。
-* 打破占有且等待条件：实行资源预分配策略，即进程在运行前一次性的向系统申请它所需要的全部资源（不可预测资源的实用、利用率低、降低并发性）。
+* 打破请求和保持条件：实行资源预分配策略，即进程在运行前一次性的向系统申请它所需要的全部资源（不可预测资源的实用、利用率低、降低并发性）。
 * 破坏循环等待条件：采用这种策略，即把资源事先分类编号，按号分配，使进程在申请、占用资源时不会形成环路。所有进程对资源的请求必须严格按资源序号递增的顺序提出（限制和编号实现困难，增加系统开销，有些资源暂时不用也需要先申请，增加了进程对资源的占用时间）。
 
-### 死锁避免
+### 4.2. 死锁避免
 
 　　允许进程动态的申请资源，但系统在进行资源分配前，应先计算此次资源分配的安全性。若此次分配不会导致系统进入不安全状态，则将资源分配给进程，否则，让进程等待。
 
-　　所谓安全状态，是指系统能按某种进程推进顺序，为每个进程分配其所需要的资源，直至满足每个进程对资源的最大需求，是每个进程都可以顺序的完成。此时成 P1P2P3... 为安全序列，如果系统无法找到一个安全序列，则称系统处于不安全状态。
+　　所谓安全状态，是指系统能按某种进程推进顺序，为每个进程分配其所需要的资源，直至满足每个进程对资源的最大需求，是每个进程都可以顺序的完成。此时 P1P2P3... 为安全序列，如果系统无法找到一个安全序列，则称系统处于不安全状态。
 
 　　并非所有的不安全状态都是死锁状态，但当系统进入不安全状态后，便可能进入死锁状态，反之，只要系统处于安全状态，系统便可以避免进入死锁状态。
 
 　　银行家算法是著名的死锁避免算法。
 
-### 死锁检测
+### 4.3. 死锁检测
 
-　　资源分配图&死锁定理。
+　　不试图阻止死锁，而是当检测到死锁发生时，采取措施进行恢复。
 
-### 死锁解除
+#### 4.3.1. 每种类型一个资源的死锁检测
+
+![](image/每种类型一个资源的死锁检测.png)
+
+　　上图为资源分配图，其中方框表示资源，圆圈表示进程。资源指向进程表示该资源已经分配给该进程，进程指向资源表示进程请求获取该资源。
+
+　　图 a 可以抽取出环，如图 b，它满足了环路等待条件，因此会发生死锁。
+
+　　每种类型一个资源的死锁检测算法是通过检测有向图是否存在环来实现的，从一个节点出发进行深度优先搜索，对访问过的节点进行标记，如果访问了已经标记过的节点，就表示有向图存在环，也就是检测到死锁的发生。
+
+#### 4.3.2. 每种类型多个资源的死锁检测
+
+![](image/每种类型多个资源的死锁检测.png)
+
+　　上图中，有三个进程四个资源，每个数据代表的含义如下：
+
+* E 向量：资源总量
+* A 向量：资源剩余量
+* C 矩阵：每个进程所拥有的资源数量，每一行都代表一个进程拥有资源的数量。
+* R 矩阵：每个进程请求的资源数量
+
+　　进程 P1 和 P2 所请求的资源都得不到满足，只有进程 P3 可以，让 P3 执行，之后释放 P3 拥有的资源，此时 A = ( 2 2 2 0)。P2 可以执行，执行后释放 P2 拥有的资源，A = ( 4 2 2 1)。P1 也可以执行。所有进程都可以顺利执行，没有死锁。
+
+　　算法总结如下：
+
+　　每个进程最开始时都不被标记，执行过程有可能被标记。当算法结束时，任何没有被标记的进程都是死锁进程。
+
+1. 寻找一个没有标记的进程 Pi，它所请求的资源小于等于 A。
+2. 如果找到了这样一个进程，那么将 C 矩阵的第 i 行向量加到 A 中，标记该进程，并转回 1。
+3. 如果没有这样一个进程，算法终止。
+
+### 4.4. 死锁解除
 
 1. 资源剥夺法。挂起某些死锁进程，并抢占它的资源，将这些资源分配给其他的死锁进程。但应防止被挂起的进程长时间得不到资源时，而处于资源匮乏的状态。
 2. 资源撤销法。强制撤销一个或一部分进程并剥夺这些进程的资源，撤销的原则可以按进程的优先级和撤销进程代价的高低进行。
-3. 进程回退法。让一个或多个进程回退到足以回避死锁的地步，进程回退时资源释放资源而不是被剥夺。要求系统保持进程的历史信息，设置还原点。
+3. 进程回退法。让一个或多个进程回退到足以回避死锁的地步，进程回退时资源被释放而不是被剥夺。要求系统保持进程的历史信息，设置还原点。
 
-### 调整申请锁的范围
+## 5. 解决死锁的示例
+
+### 5.1. 调整申请锁的范围
 
 ```java
     public static class TestClass {
         public void method(TestClass clazz) {
             System.out.println("TestClass method in");
             synchronized (this){
-				// do something
+								// do something
             }
             clazz.methods();
             System.out.println("TestClass method out");
@@ -211,11 +255,11 @@ TestClass method in
     }
 ```
 
-　　原来锁是加在方法上的，现在该为在方法内的一部分，这样在实用第二个锁时本身的锁已经释放了。如果减少锁的申请范围可以避免锁的申请发生闭环的话，那么就可以避免死锁。
+　　原来锁是加在方法上的，现在改为在方法内的一部分，这样在使用第二个锁时本身的锁已经释放了。如果减少锁的申请范围可以避免锁的申请发生闭环的话，那么就可以避免死锁。
 
-### 调整申请锁的顺序
+### 5.2. 调整申请锁的顺序
 
-　　在有些情况下是不允许调整锁的范围的，比如银行转账的场景下，必须同时获得两个账户上的锁，才能进行操作，两个锁的申请必须发生交叉。这时要想打破锁闭环，必须调整锁的申请顺序，总是以相同的顺序来申请锁，比如总是先申请 id 大的账号上的锁，然后再申请 id 小的彰化上的锁，这样就无法形成导致死锁的那个闭环。
+　　在有些情况下是不允许调整锁的范围的，比如银行转账的场景下，必须同时获得两个账户上的锁，才能进行操作，两个锁的申请必须发生交叉。这时要想打破锁闭环，必须调整锁的申请顺序，总是以相同的顺序来申请锁，比如总是先申请 id 大的账号上的锁，然后再申请 id 小的账号上的锁，这样就无法形成导致死锁的那个闭环。
 
 ```java
 public class Account {
@@ -245,13 +289,13 @@ public class Account {
 }
 ```
 
-　　这样的话，即使发生了两个账户比如 id  = 1 的和 id = 100 的两个账户互相转账，因为不管是哪个线程先获得了 id = 100 上的锁，另外一个线程都不会去获取 id = 1 上的锁（因为他没有获得 id = 100 上的锁），只能是哪个线程先获得 id = 100 上的锁，哪个线程就先进行转账。这里出了使用 id 之外，如果没有类似 id 这样的属性可以比较，那么也可以使用对象的 hashCode() 的值来进行比较。
+　　这样的话，即使发生了两个账户比如 id  = 1 的和 id = 100 的两个账户互相转账，因为不管是哪个线程先获得了 id = 100 上的锁，另外一个线程都不会去获取 id = 1 上的锁（因为他没有获得 id = 100 上的锁），只能是哪个线程先获得 id = 100 上的锁，哪个线程就先进行转账。这里除了使用 id 之外，如果没有类似 id 这样的属性可以比较，那么也可以使用对象的 hashCode() 的值来进行比较。
 
-### 使用信号量解决死锁
+### 5.3. 使用信号量解决死锁
 
-　　为了解决上面的死锁问题，不适用显式的去锁，用信号量去控制。
+　　为了解决上面的死锁问题，不使用显式的去锁，用信号量去控制。
 
-　　信号量可以控制资源能被多少线程访问，这里指定只能被一个线程访问，就做到了类似锁住。而信号量可以指定去获取的超时时间，可以根绝这个超时时间，去做一个额外处理。
+　　信号量可以控制资源能被多少线程访问，这里指定只能被一个线程访问，就做到了类似锁住。而信号量可以指定去获取的超时时间，可以根据这个超时时间，去做一个额外处理。
 
 　　对于无法成功获取的情况，一般就是重复尝试，或指定尝试的次数，也可以马上退出。
 
@@ -278,6 +322,7 @@ class LockAa implements Runnable {
         try {
             System.out.println(new Date().toString() + " LockA 开始执行");
             while (true) {
+              	// 如果超过 TimeUnit.SECONDS 没有获得锁，则获取锁失败
                 if (UnLockTest.a1.tryAcquire(1, TimeUnit.SECONDS)) {
                     System.out.println(new Date().toString() + " LockA 锁住 obj1");
                     if (UnLockTest.a2.tryAcquire(1, TimeUnit.SECONDS)) {
@@ -345,7 +390,7 @@ Thu Jun 11 15:43:50 CST 2020 LockA 锁住 obj1
 ```
 
 
-## 参考文章
+## 6. 参考文章
 1. [Java 实例 - 死锁及解决方法](https://www.runoob.com/java/thread-deadlock.html)
 2. [死锁的原因，条件和解决办法](https://www.jianshu.com/p/26881a1b9e30)
 3. [Java死锁的原因例子及解决方法](https://blog.csdn.net/lyabc123456/article/details/81060477)
