--- a/Java/线程/锁.md
+++ b/Java/线程/锁.md
@@ -2,11 +2,11 @@
 
 　　Java 提供了种类丰富的锁，每种锁因其特性的不同 ，在适当的场景下能够展现出非常高的效率。
 
-## 预备知识
+## 1. 预备知识
 
-### 1. AQS
+### 1.1. AQS
 
-　　AbstractQueuedSynchronzied 抽象对象式的同步器，AQS 定义了以套多线程访问共享资源的同步器框架，许多同步类实现都依赖于它，如常用的 ReentrantLock/Semaphore/CountDownLatch...
+　　AbstractQueuedSynchronzied 抽象对象式的同步器，AQS 定义了一套多线程访问共享资源的同步器框架，许多同步类实现都依赖于它，如常用的 ReentrantLock/Semaphore/CountDownLatch 等。
 
 　　AQS 维护了一个 volatile int state（代表共享资源）和一个 FIFO 线程等待队列（多线程争用资源被阻塞时会进入此队列）。
 
@@ -26,70 +26,114 @@ compareAndSetState()
 isHeldExclusively()：该线程是否正在独占资源。只有用到 condition 才需要去实现它。
 tryAquire(int)：独占方式。尝试获取资源，成功则返回 true，失败则返回 false.
 tryRelease(int)：独占方式。尝试释放资源，成功则返回 true，失败则返回 false。
-tryAcquireShared(int)：共享方式。尝试获取资源。负数表示失败；0表示成功，但没有剩余可用资源；正数表示成功，且有剩余资源。
+tryAcquireShared(int)：共享方式。尝试获取资源。负数表示失败；0 表示成功，但没有剩余可用资源；正数表示成功，且有剩余资源。
 tryReleaseShared(int)：共享方式。尝试释放资源，如果释放后允许唤醒后续等待节点返回 true，否则返回 false。
 ```
 
-　　以 ReentrantLock 为例，state 初始化为 0，表示未锁定状态。A 线程 lock() 时，会调用 tryAcquire() 独占该锁并将 state+1。此后，其他线程再 tryAcquire() 时就会失败，直到 A 线程 unlock() 到 state = 0 （即释放锁）为止，其他线程才有机会获取该锁。当然，释放锁之前，A 线程自己是可以重复获取此锁的（state 会累加），这就是可重入的概念。但要注意，获取多多少次就要释放多少次，这样才能保证 state 是能回到零态的。
+　　以 ReentrantLock 为例，state 初始化为 0，表示未锁定状态。A 线程 lock() 时，会调用 tryAcquire() 独占该锁并将 state+1。此后，其他线程再 tryAcquire() 时就会失败，直到 A 线程 unlock() 到 state = 0 （即释放锁）为止，其他线程才有机会获取该锁。当然，释放锁之前，A 线程自己是可以重复获取此锁的（state 会累加），这就是可重入的概念。但要注意，获取多少次就要释放多少次，这样才能保证 state 是能回到零态的。
 
 　　再以 CountDownLatch 为例，任务分为 N 个子线程去执行，state 初始化为 N（注意 N 要与线程个数一致）。这 N 个子线程是并行执行的，每个子线程执行完后 countDown() 一次，state 会 CAS 减一。等到所有子线程都执行完后（即 state = 0），会 unpark() 主调用线程，然后主调用线程就会 await() 函数返回，继续后余动作。
 
-　　一般来说，自定义同步器要么是独占方法，要么是共享方式，他们只需实现 tryAcquire-tryRelease、tryAcquireShared-tryReleaseShared 中的一种即可。但 AQS 也支持自定义同步器同时实现独占和共享两种方式，如 ReentrantReadWriteLock。
+　　一般来说，自定义同步器要么是独占方法，要么是共享方式，它们只需实现 tryAcquire-tryRelease、tryAcquireShared-tryReleaseShared 中的一种即可。但 AQS 也支持自定义同步器同时实现独占和共享两种方式，如 ReentrantReadWriteLock。
 
-### 2. CAS
+### 1.2. CAS
 
-　　CAS（Compare and Swap 比较并交换）是乐观锁技术，当多个线程尝试使用 CAS 同时更新同一个变量时，只有其中一个线程能更新变量的值，而其他线程都失败，失败的线程并不会被挂起，而是被告知这次竞争中失败，并可以再次尝试。
+　　CAS 全称 Compare And Swap（比较与交换），是一种无锁算法，在不使用锁（没有线程被阻塞）的情况下实现多线程之间的变量同步。
 
-　　CAS 操作中包含三个操作数 -- 需要读写的内存位置（V）、进行比较的预期原值（A）和拟写入的新值（B）。如果内存位置 V 的值与预期原值 A 相匹配，那么处理器会自动将该位置值更新为新值 B，否则处理器不做任何操作。无论哪种情况，它都会在 CAS 指令之前返回该位置的值（在 CAS 的一些特殊情况下将仅返回 CAS 是否成功，而不提取当前值）。CAS 有效地说明了 “我认为位置 V 应该包含值 A；如果包含该值，则将 B 放到这个位置；否则，不要更改该位置，只告诉这个位置现在的值即可”。这其实和乐观锁的冲突检查 + 数据更新的原理是一样的。
+　　CAS 是乐观锁技术，当多个线程尝试使用 CAS 同时更新同一个变量时，只有其中一个线程能更新变量的值，而其他线程都失败，失败的线程并不会被挂起，而是被告知这次竞争中失败，并可以再次尝试。java.util.concurrent 包中的原子类就是通过 CAS 来实现了乐观锁。
 
-　　JAVA 对 CAS 的支持：
+　　CAS 操作中包含三个操作数：
 
-　　在 JDK 1.5 中新增 java.util.concurrent 包就是建立在 CAS 之上的。相对于 synchronized 这种阻塞算法，CAS 是非阻塞算法的一种常见实现。所以 java.util.concurrent 包中的 AtomicInteger 为例，看一下在不适用锁的情况下是如何保证线程安全的。主要理解 getAndIncrement 方法，该方法的作用相当于 ++i 操作。
+1. 需要读写的内存位置（V）
+2. 进行比较的预期原值（A）
+3. 拟写入的新值（B）
+
+　　当且仅当内存位置 V 的值与预期原值 A 相匹配，那么处理器会自动将该位置值更新为新值 B（“比较 + 更新” 整体是一个原子操作），否则处理器不做任何操作。一般情况下，“ 更新 ” 是一个不断重试的操作。无论哪种情况，它都会在 CAS 指令之前返回该位置的值（在 CAS 的一些特殊情况下将仅返回 CAS 是否成功，而不提取当前值）。CAS 有效地说明了 “ 我认为位置 V 应该包含值 A；如果包含该值，则将 B 放到这个位置；否则，不要更改该位置，只告诉这个位置现在的值即可”。这其实和乐观锁的冲突检查 + 数据更新的原理是一样的。
+
+#### 1.2.1. JAVA 对 CAS 的支持
+
+　　在 JDK 1.5 中新增 java.util.concurrent 包就是建立在 CAS 之上的。相对于 synchronized 这种阻塞算法，CAS 是非阻塞算法的一种常见实现。所以 java.util.concurrent 包中的 AtomicInteger 为例，看一下在不使用锁的情况下是如何保证线程安全的。
+
+　　看一下 AtomicInterfer 的定义：
 
 ```java
 public class AtomicInteger extends Number implements java.io.Serializable {
+    private static final long serialVersionUID = 6214790243416807050L;
+
+    /*
+     * This class intended to be implemented using VarHandles, but there
+     * are unresolved cyclic startup dependencies.
+     */
+    private static final jdk.internal.misc.Unsafe U = jdk.internal.misc.Unsafe.getUnsafe();
+    private static final long VALUE = U.objectFieldOffset(AtomicInteger.class, "value");
+
     private volatile int value;
-    public final int get() {
-        return value;
-    }
-    public final int getAndIncrement() {
-        return U.getAndAddInt(this, VALUE, 1);
-    }
-    public final boolean compareAndSet(int expectedValue, int newValue) {
-        return U.compareAndSetInt(this, VALUE, expectedValue, newValue);
-    }
 }
 ```
 
+　　根据定义可以看出个属性的作用：
+
+* U：获取并操作内存的数据。
+* VALUE：存储 value 在 AtomicInteger 中的偏移量。
+* value：存储 AtomicInteger 的 int 值，该属性需要借助 volatile 关键字保证其在线程间是可见的。
+
+　　接下来，查看 AtomicInteger 的自增函数 incrementAndGet() 的源码，该方法的作用相当于 ++i 操作。
+
+```java
+    public final int incrementAndGet() {
+        return U.getAndAddInt(this, VALUE, 1) + 1;
+    }
 
 
-## 1. 乐观锁 VS 悲观锁
+```
 
-　　乐观锁与悲观锁是一种广义上的概念，体现了看待线程同步的不同角度。在 Java 和数据库中都有此概念对应的实际应用。
+　　发现自增函数底层实现调用的是 U.getAndAddInt()，也就是 Unsafe 的 getAndAddInt() 方法，接着查看 Unsafe 的源码。
 
-　　乐观锁与悲观锁并不是特指某两种类型的锁，是人们定义出来的概念或思想，主要是指看待并发同步的角度。
+```java
+    @HotSpotIntrinsicCandidate
+    public final int getAndAddInt(Object o, long offset, int delta) {
+        int v;
+        do {
+            v = getIntVolatile(o, offset);
+        } while (!weakCompareAndSetInt(o, offset, v, v + delta));
+        return v;
+    }
+```
 
-　　乐观锁：顾名思义，就是很乐观，每次去拿数据的时候都认为别人不会修改，所以不会上锁，但是在更新的时候会判断一下在此期间别人有没有去更新这个数据，可以使用版本号等机制。乐观锁适用于多读的应用类型，这样可以提高吞吐量，在 Java 中 java.util.concurrent.atomic 包下面的原子变量类就是使用了乐观锁的一种实现方式 CAS(Compare and Swap 比较并交换)实现的。
+　　根据 Unsafe 的 getAndAddInt() 方法的源码可以看出，getAndAddInt() 循环获取给定对象 o 中的偏移量 offset 处的值 v，然后判断内存值是否等于 v。如果相等则将内存值设置为 v+delta，否则循环仅重试，直到设置成功才能退出循环，并且将旧值返回。这个 “ 比较+更新 ” 操作封装在 weakCompareAndSetInt() 中，在 JNI 里是借助一个 CPU 指令完成的，属于原子操作，可以保证多个线程都能够看到同一个变量的修改值。
 
-　　对于同一个数据的并发操作，悲观锁认为自己在使用数据的时候一定有别的线程来修改数据，因此在获取数据的时候会先加索，确保数据不会被别的线程修改。Java 中，synchronized 关键字和 Lock 的实现类都是悲观锁。
+　　后续 JDK 通过 CPU 的 cmpxchg 指令，去比较寄存器中的 A 和内存中的值 V。如果相等，就把要写入的新值 B 写入内存中。如果不相等，就将内存值 V 复制给寄存器中的值 A。然后通过 Java 代码中的 while 循环再次调用 cmpxchg 指令进行重试，直到设置成功为止。
 
-　　悲观锁：送时假设最坏的情况，每次去拿数据的时候都认为别人会修改，所以每次在拿数据的时候都会上锁，这样别人想拿这个数据就会阻塞直到它拿到所。比如 Java 里面的同步原语 synchronzied 关键字的实现都是悲观锁。
+　　CAS 虽然很高效，但是它也存在三大问题，这里也简单说一下：
 
-　　悲观锁适合写操作非常多的场景，乐观锁适合读操作非常多的场景，不加锁会带来大量的性能提升。
+1. ABA 问题。CAS 需要在操作值的时候检查内存值是否发生变化，没有发生变化才会更新内存值。但是如果内存值原来是 A，后来变成了 B，然后又变成了 A，那么 CAS 进行检查时会发现值没有发生变化，但是实际上是有变化的。ABA 问题的解决思路就是在变量前面添加版本号，每次变量更新的时候都把版本号加一，这样变化过程就从 “ A-B-C ” 变成了 “1A - 2B - 3A”。
 
-　　悲观锁在 Java 中的使用，就是利用各种锁。
+   JDK 从 1.5 开始提供了 AtomicStampedReference 类来解决 ABA 问题，具体操作封装在 compareAndSet() 中。compareAndSet() 首先检查当前引用和当前标志与预期引用和与其标志是否相等，如果都相等，则以原子方式将引用值和标志的值设置为给定的更新值。
 
-　　乐观锁在 Java 中的使用，是无锁编程，常常采用的是 CAS 算法，典型的例子就是原子类，通过 CAS 自旋实现原子操作的更新。
+2. 循环时间长开销大。CAS 操作如果长时间不成功，会导致其一直自旋，给 CPU 带来非常大的开销。
 
-　　而乐观锁认为自己在使用数据时不会有别的线程修改数据，所以不会添加锁，只是在更新数据的时候去判断之前有没有别的线程更新了这个数据。如果这个数据没有被更新，当前线程将自己修改的数据成功写入。如果数据已经被其他线程更新，则根据不同的实现方式执行不同的操作（例如报错或者自动重试）。
+3. 只能保证一个共享变量的原子操作。对一个共享变量执行操作时，CAS 能够保证原子操作，但是对多个共享变量操作时，CAS 是无法保证操作的原子性的。
 
-　　乐观锁在 Java 中是通过使用无锁变成来实现，最长采用的是 CAS 算法，Java 原子类中的递增操作就通过 CAS 自旋实现的。
+   Java 从 1.5 开始 JDK 提供了 AtomicReference 类来保证引用对象之间的原子性，可以把多个变量放在一个对象里来进行 CAS 操作。
+
+## 2. 乐观锁 VS 悲观锁
+
+　　乐观锁与悲观锁是一种广义上的概念，并不是特指某两种类型的锁，是人们定义出来的概念或思想，主要是体现了看待线程并发同步的不同角度。在 Java 和数据库中都有此概念对应的实际应用。
+
+![](image/悲观锁和乐观锁.png)
+
+　　根据从上面的概念描述可以发现：
+
+* 悲观锁适合写操作多的场景，先加锁可以保证写操作时数据正确。
+* 乐观锁适合读操作多的场景，不加锁的特点能够使其读操作的性能大幅提升，提高吞吐量。
 
 ### 1.1. 乐观锁
 
-　　乐观锁总是认为不存在并发问题，每次去取数据的时候，总认为不会有其他线程对数据进行修改，因此不会上锁。但是在更新时会判断线程在这之前有没有对数据进行修改，一般会使用 “数据版本机制” 或 “CAS操作” 来实现。
+　　乐观锁：顾名思义，就是很乐观，乐观锁总是认为不存在并发问题，每次去拿数据的时候都认为别人不会修改，所以不会上锁，但是在更新的时候会判断一下之前有没有去更新这个数据。如果这个数据没有被更新，当前线程将自己修改的数据成功写入。如果数据已经被其他线程更新，则根据不同的实现方式执行不同的操作（例如报错或者自动重试）。
 
-　　乐观锁则认为对于同一个数据的并发操作，是不会发生修改的。在更新数据的时候，会采用尝试更新，不断重试的方式更新数据。乐观的认为，不加锁的并发操作时没有事情的。
+　　乐观锁在 Java 中的使用，是无锁编程，常常采用的是 CAS 算法，在 Java 中 java.util.concurrent.atomic 包下面的原子变量类就是使用了乐观锁的一种实现方式 CAS(Compare and Swap 比较并交换)实现的，通过 CAS 自旋实现原子操作的更新。
+
+　　在更新时会判断线程在这之前有没有对数据进行修改，一般会使用 “ 数据版本机制 ” 或 “ CAS操作 ” 来实现。
 
 #### 1.1.1. 数据版本机制
 
@@ -99,13 +143,13 @@ public class AtomicInteger extends Number implements java.io.Serializable {
 
 #### 1.1.2. CAS 操作
 
-　　CAS（Compare and Swap 比较并交换），当多个线程尝试使用 CAS 同时更新同一个变量时，只有其中一个线程能更新变量的值，而其他线程都失败，失败的线程并不会被挂起，而是被搞之这次竞争中失败，并可以再次尝试。
+　　CAS（Compare and Swap 比较并交换），当多个线程尝试使用 CAS 同时更新同一个变量时，只有其中一个线程能更新变量的值，而其他线程都失败，失败的线程并不会被挂起，而是被告之这次竞争中失败，并可以再次尝试。
 
 　　CAS 操作中包含三个操作数 -- 需要读写的内存位置（V）、进行比较的于其原值（A）和拟写入的新值（B）。如果内存位置 V 的值与预期原值 A 相匹配，那么处理器会自动将该位置值更新为新值 B，否则处理器不做任何操作。
 
 ### 1.2. 悲观锁
 
-　　悲观锁认为对于同一个数据的并发操作，一定会发生修改的，哪怕没有修改，也会认为修改。因此对于同一份数据的并发操作，悲观锁采取加锁的形式。悲观的认为，不加锁并发操作一定会出问题。
+　　悲观锁：对于同一个数据的并发操作，总是假设最坏的情况，每次去拿数据的时候都认为别人会修改，因此在获取数据的时候会先加锁，确保数据不会被别的线程修改，这样别人想拿这个数据就会阻塞直到它拿到锁。Java 中，synchronized 关键字和 Lock 的实现类都是悲观锁。
 
 　　在对任意记录进行修改前，先尝试为该记录加上排他锁（exclusive locking）。
 
@@ -115,12 +159,9 @@ public class AtomicInteger extends Number implements java.io.Serializable {
 
 　　期间如果有其他对该记录做修改或加排他锁的操作，都会等待解锁或直接抛出异常。
 
-![](image/悲观锁和乐观锁.png)
+　　悲观锁在 Java 中的使用，就是利用各种锁。
 
-　　根据从上面的概念描述可以发现：
-
-* 悲观锁适合写操作多的场景，先加锁可以保证写操作时数据正确。
-* 乐观锁适合读操作多的场景，不加锁的特点能够使其读操作的性能大幅提升。
+### 1.3. 悲观锁与乐观锁的调用
 
 ```java
     // --------悲观锁的调用方式--------
@@ -146,80 +187,9 @@ public class AtomicInteger extends Number implements java.io.Serializable {
     }
 ```
 
-　　通过调用方式示例，可以发现悲观锁基本都是在显示的锁定之后再操作同步资源，而乐观锁则直接去操作同步资源。那么，为何乐观锁能够做到不锁定同步资源也可以正确的实现线程同步呢？通过介绍乐观锁的主要实现方式 “CAS” 的技术原理来解释。
+　　通过调用方式示例，可以发现悲观锁基本都是在显示的锁定之后再操作同步资源，而乐观锁则直接去操作同步资源。而乐观锁之所以可以做到不锁定同步资源也可以正确的实现线程同步，是因为 CAS 在当前内存值 V 等于比较的值 A 值，才会通过原子操作将 V 更新为新值 B，如果不相等，则自旋重试。　
 
-　　CAS 全称 Compare And Swap（比较与交换），是一种无锁算法。在不使用锁（没有线程被阻塞）的情况下实现多线程之间的变量同步。java.util.concurrent 包中的原子类就是通过 CAS 来实现了乐观锁。
-
-　　CAS 算法涉及到三个操作数：
-
-* 需要读写的内存值 V。
-* 进行比较的值 A。
-* 要写入的新值 B。
-
-　　当且仅当 V 的值等于 A 时，CAS 通过原子方式用新值 B 来更新 V 的值（“比较 + 更新” 整体是一个原子操作），否则不会执行任何操作。一般情况下，“ 更新 ” 是一个不断重试的操作。
-
-　　之前提到 java.util.concurrent 包中的原子类，就是通过 CAS 来实现了乐观锁，那么进入原子类 AtomicInteger 的源码，看一下 AtomicInterfer 的定义：
-
-```java
-public class AtomicInteger extends Number implements java.io.Serializable {
-    private static final long serialVersionUID = 6214790243416807050L;
-
-    /*
-     * This class intended to be implemented using VarHandles, but there
-     * are unresolved cyclic startup dependencies.
-     */
-    private static final jdk.internal.misc.Unsafe U = jdk.internal.misc.Unsafe.getUnsafe();
-    private static final long VALUE = U.objectFieldOffset(AtomicInteger.class, "value");
-
-    private volatile int value;
-}
-```
-
-　　根据定义可以看出个属性的作用：
-
-* U：获取并操作内存的数据。
-* VALUE：存储 value 在 AtomicInteger 中的偏移量。
-* value：存储 AtomicInteger 的 int 值，该属性需要借助 volatile 关键字保证其在线程间是可见的。
-
-　　接下来，查看 AtomicInteger 的自增函数 incrementAndGet() 的源码时。
-
-```java
-    public final int incrementAndGet() {
-        return U.getAndAddInt(this, VALUE, 1) + 1;
-    }
-
-```
-
-　　发现自增函数底层实现调用的是 U.getAndAddInt()，也就是 Unsafe 的 getAndAddInt() 方法，接着查看 Unsafe 的源码。
-
-```java
-    @HotSpotIntrinsicCandidate
-    public final int getAndAddInt(Object o, long offset, int delta) {
-        int v;
-        do {
-            v = getIntVolatile(o, offset);
-        } while (!weakCompareAndSetInt(o, offset, v, v + delta));
-        return v;
-    }
-```
-
-　　根据 Unsafe 的 getAndAddInt() 方法的源码可以看出，getAndAddInt() 循环获取给定对象 o 中的偏移量处的值 v，然后判断内存值是否等于 v。如果相等则将内存值设置为 v+delta，否则循环仅从重试，直到设置成功才能退出循环，并且将旧值返回。这个 “ 比较+更新 ” 操作封装在 weakCompareAndSetInt() 中，在 JNI 里是借助一个 CPU 指令完成的，属于原子操作，可以保证多个线程都能够看到同一个变量的修改值。
-
-　　后续 JDK 通过 CPU 的 cmpxchg 指令，去比较寄存器中的 A 和内存中的值 V。如果相等，就把要写入的新值 B 写入内存中。如果不相等，九江内存值 V 复制给寄存器中的值 A。然后通过 Java 代码中的 while 循环再次调用 cmpxchg 指令进行重试，直到设置成功为止。
-
-　　CAS 虽然很高效，但是它也存在三大问题，这里也简单说一下：
-
-1. ABA 问题。CAS 需要在操作值得时候检查内存值是否发生变化，没有发生变化才会更新内存值。但是如果内存值原来是 A，后来变成了 B，然后又变成了 A，那么 CAS 进行检查时会发现值没有发生变化，但是实际上是有变化的。ABA 问题的解决思路就是在变量前面添加版本号，每次变量更新的时候都把版本号加一，这样变化过程就从 “ A-B-C ” 变成了 “1A - 2B - 3A”。
-
-   JDK 从 1.5 开始提供了 AtomicStampedReference 类来解决 ABA 问题，具体操作封装在 compareAndSet() 中。compareAndSet() 首先检查当前引用和当前标志与预期引用和于其标志是否相等，如果都相等，则以原子方式将引用值和标志的值设置为给定的更新值。
-
-2. 循环时间长开销大。CAS 操作如果长时间不成功，会导致其一直自旋，给 CPU 带来非常大的开销。
-
-3. 只能保证一个共享变量的原子操作。对一个共享变量执行操作时，CAS 能够保证原子操作，但是对多个共享变量操作时，CAS 是无法保证操作的原子性的。
-
-　　Java 从 1.5 开始 JDK 提供了 AtomicReference 类来保证引用对象之间的原子性，可以把多个变量放在一个对象里来进行 CAS 操作。
-
-## 2. 自旋锁 VS 适应性自旋锁
+## 3. 自旋锁 VS 适应性自旋锁
 
 　　阻塞或唤醒一个 Java 线程需要操作系统切换 CPU 状态来完成，这种状态转换需要耗费处理器时间。如果同步代码块中的内存过于简单，状态转换消耗的时间有可能比用户代码执行的时间还要长。
 
