--- a/system/死锁.md
+++ b/system/死锁.md
@@ -163,7 +163,7 @@
 
 ### 2. 单个资源的银行家算法
 
-　　一个小城镇的应行家，他向一群客户分别承诺了一定的带宽额度，算法要做的是判断对请求的满足是否会进入不安全状态，如果是，就拒绝请求；否则予以分配。
+　　一个小城镇的银行家，他向一群客户分别承诺了一定的贷款额度，算法要做的是判断对请求的满足是否会进入不安全状态，如果是，就拒绝请求；否则予以分配。
 
 ![](image/单个资源的银行家算法.png)
 
